fixed error handling with domains so the app doesn't crash on bower errors (e.g. unkown packages)

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <![endif]-->
 
     <h1>bower proxy</h1>
+    <p>i will fetch bower packages, zip them and serve them to you.</p>
     <p>use me like this: <a href="http://bowerproxy.herokuapp.com/install/jquery">http://bowerproxy.herokuapp.com/install/jquery</a></p>
     <p>or like this: <a href="http://bowerproxy.herokuapp.com/install/jquery/1.8.3">http://bowerproxy.herokuapp.com/install/jquery/1.8.3</a></p>
 
